Closed Bug 559754 Opened 15 years ago Closed 15 years ago

IME Composition in password field cannot be committed by click (and forceCompositionEnd())

Categories

(Core :: DOM: Editor, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.9.3a5

People

(Reporter: masayuki, Assigned: masayuki)

References

Details

(Keywords: inputmethod)

Attachments

(1 file)

Attached patch Patch v1.0Splinter Review
Currently, IME can be used on password field too if the password field has "ime-mode: normal;" style. However, nsEditor::ForceCompositionEnd() doesn't call nsIWidget::ResetInputState() if the editor is password editor on GTK2 build. We should remove the early return for ime-mode.
Attachment #439477 - Flags: review?(Olli.Pettay)
Comment on attachment 439477 [details] [diff] [review] Patch v1.0 Do we have any ways to test this all?
Attachment #439477 - Flags: review?(Olli.Pettay) → review+
(In reply to comment #1) > (From update of attachment 439477 [details] [diff] [review]) > Do we have any ways to test this all? No, currently, we cannot do it. I need to fix bug 460056.
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.3a5
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: