Bug 559754 IME Composition in password field cannot be committed by click (and forceCompositionEnd()) r=smaug